--- a/index.html
+++ b/index.html
@@ -8,140 +8,155 @@
     <body>
         <table>
             <tr>
-                <th class="descriptor">Base</th>
-                <th class="field">
-                    <select id="base">
-                        <option value="1">1</option>
-                        <option value="2">2</option>
-                        <option value="3">3</option>
-                        <option value="4">4</option>
-                        <option value="5">5</option>
-                        <option value="6">6</option>
-                        <option value="7">7</option>
-                        <option value="8">8</option>
-                        <option value="9">9</option>
-                        <option value="10">10</option>
-                    </select>
+                <th class="descriptor">
+                    Base
                 </th>
-                <th class="descriptor">Job</th>
                 <th class="field">
-                    <select id="job">
-                        <option value="1">1</option>
-                        <option value="2">2</option>
-                        <option value="3">3</option>
-                        <option value="4">4</option>
-                        <option value="5">5</option>
-                        <option value="6">6</option>
-                        <option value="7">7</option>
-                        <option value="8">8</option>
-                        <option value="9">9</option>
-                        <option value="10">10</option>
-                    </select>
+                    <select id="base"></select>
                 </th>
-                <th class="descriptor">Class</th>
+                <th class="descriptor">
+                    Job
+                </th>
+                <th class="field">
+                    <select id="job"></select>
+                </th>
+                <th class="descriptor">
+                    Class
+                </th>
                 <th class="field">
                     <select name="Class" size="1">
-                        <option value="Swd">Swordsman</option>
-                        <option value="Mag">Mage</option>
-                        <option value="Arc">Archer</option>
-                        <option value="Mer">Merchant</option>
-                        <option value="Thf">Thief</option>
-                        <option value="Aco">Acolyte</option>
+                        <!-- 
+                            Value guide:
+                            0 - Min base level: 1, Max base level: 99, Max job level: 10, Can be reborn 
+                            1 to 6 - Min base level: 1, Max base level: 99, Max job level: 50, Can be reborn
+                            7 to 22 - Min base level: 1, Max base level: 99, Max job level: 50, Can't be reborn
+                            23 to 24 - Min base level: 1, Max base level: 99, Max job level: 70, Can't be reborn
+                            25 - Min base level: 1, Max base level: 99, Max job level: 99, Can't be reborn
+                            26 to 38 - Min base level: 1, Max base level: 99, Max job level: 70, Is reborn
+                            39 - Min base level: 1, Max base level: 185, Max job level: 55, Can't be reborn
+                            40 to 52 - Min base level: 99, Max base level: 185, Max job level: 65, Can be reborn
+                            53 to 58 - Min base level: 99, Max base level: 185, Max job level: 65, Can't be reborn
+                        -->
+                        <!-- Base Job -->
+                        <option disabled>Base Job</option>
+                        <option value="0">Novice</option>
+                        <!-- First Job -->
+                        <option disabled>First Job</option>
+                        <option value="1">Swordsman</option>
+                        <option value="2">Mage</option>
+                        <option value="3">Archer</option>
+                        <option value="4">Merchant</option>
+                        <option value="5">Thief</option>
+                        <option value="6">Acolyte</option>
+                        <!-- Second Job -->
+                        <option disabled>Second Job</option>
+                        <option value="7">Knight</option>
+                        <option value="8">Wizard</option>
+                        <option value="9">Hunter</option>
+                        <option value="10">Blacksmith</option>
+                        <option value="11">Assassin</option>
+                        <option value="12">Priest</option>
+                        <option value="13">Crusader</option>
+                        <option value="14">Sage</option>
+                        <option value="15">Bard</option>
+                        <option value="16">Dancer</option>
+                        <option value="17">Alchemist</option>
+                        <option value="18">Rogue</option>
+                        <option value="19">Monk</option>
+                        <!-- Second Job (Trans) -->
+                        <option disabled>Second Job (Trans)</option>
+                        <option value="26">Lord Knight</option>
+                        <option value="27">High Wizard</option>
+                        <option value="28">Sniper</option>
+                        <option value="29">Mastersmith</option>
+                        <option value="30">Assassin Cross</option>
+                        <option value="31">High Priest</option>
+                        <option value="32">Paladin</option>
+                        <option value="33">Professor</option>
+                        <option value="34">Minstrel</option>
+                        <option value="35">Gypsy</option>
+                        <option value="36">Creator</option>
+                        <option value="37">Stalker</option>
+                        <option value="38">Champion</option>
+                        <!-- Third Job -->
+                        <option disabled>Third Job</option>
+                        <option value="40">Rune Knight</option>
+                        <option value="41">Warlock</option>
+                        <option value="42">Ranger</option>
+                        <option value="43">Mechanic</option>
+                        <option value="44">Guillotine Cross</option>
+                        <option value="45">Arch Bishop</option>
+                        <option value="46">Royal Guard</option>
+                        <option value="47">Sorcerer</option>
+                        <option value="48">Maestro</option>
+                        <option value="49">Wanderer</option>
+                        <option value="50">Geneticist</option>
+                        <option value="51">Shadow Chaser</option>
+                        <option value="52">Sura</option>
+                        <!-- Expanded Base Job -->
+                        <option disabled>Expanded Base Job</option>
+                        <option value="39">Summoner</option>
+                        <!-- Expanded First Job -->
+                        <option disabled>Expanded First Job</option>
+                        <option value="20">Taekwon Kid</option>
+                        <option value="23">Ninja</option>
+                        <option value="24">Gunslinger</option>
+                        <!-- Expanded Second Job -->
+                        <option disabled>Expanded Second Job</option>
+                        <option value="21">Star Gladiator</option>
+                        <option value="22">Soul Linker</option>
+                        <!-- Expanded Third Job -->
+                        <option disabled>Expanded Third Job</option>
+                        <option value="53">Star Emperor</option>
+                        <option value="54">Soul Reaper</option>
+                        <option value="55">Kagerou</option>
+                        <option value="56">Oborou</option>
+                        <option value="57">Rebel</option>
+                        <!-- Super Novice Branch -->
+                        <option disabled>Super Novice</option>
+                        <option value="25">Super Novice</option>
+                        <option value="58">Expanded Super Novice</option>
                     </select>
                 </th>
             </tr>
             <tr>
-                <th class="descriptor">Str</th>
-                <th class="field">
-                    <select id="str" onchange="getStrValue();">
-                        <option value="1">1</option>
-                        <option value="2">2</option>
-                        <option value="3">3</option>
-                        <option value="4">4</option>
-                        <option value="5">5</option>
-                        <option value="6">6</option>
-                        <option value="7">7</option>
-                        <option value="8">8</option>
-                        <option value="9">9</option>
-                        <option value="10">10</option>
-                    </select>
+                <th class="descriptor">
+                    Str
                 </th>
-                <th class="descriptor">Agi</th>
                 <th class="field">
-                    <select id="agi" onchange="getAgiValue();">
-                        <option value="1">1</option>
-                        <option value="2">2</option>
-                        <option value="3">3</option>
-                        <option value="4">4</option>
-                        <option value="5">5</option>
-                        <option value="6">6</option>
-                        <option value="7">7</option>
-                        <option value="8">8</option>
-                        <option value="9">9</option>
-                        <option value="10">10</option>
-                    </select>
+                    <select id="str" onchange="getStrValue();"></select>
                 </th>
-                <th class="descriptor">Vit</th>
+                <th class="descriptor">
+                    Agi
+                </th>
                 <th class="field">
-                    <select id="vit" onchange="getVitValue();">
-                        <option value="1">1</option>
-                        <option value="2">2</option>
-                        <option value="3">3</option>
-                        <option value="4">4</option>
-                        <option value="5">5</option>
-                        <option value="6">6</option>
-                        <option value="7">7</option>
-                        <option value="8">8</option>
-                        <option value="9">9</option>
-                        <option value="10">10</option>
-                    </select>
+                    <select id="agi" onchange="getAgiValue();"></select>
+                </th>
+                <th class="descriptor">
+                    Vit
+                </th>
+                <th class="field">
+                    <select id="vit" onchange="getVitValue();"></select>
                 </th>
             </tr>
             <tr>
-                <th class="descriptor">Int</th>
-                <th class="field">
-                    <select id="int" onchange="getIntValue();">
-                        <option value="1">1</option>
-                        <option value="2">2</option>
-                        <option value="3">3</option>
-                        <option value="4">4</option>
-                        <option value="5">5</option>
-                        <option value="6">6</option>
-                        <option value="7">7</option>
-                        <option value="8">8</option>
-                        <option value="9">9</option>
-                        <option value="10">10</option>
-                    </select>
+                <th class="descriptor">
+                    Int
                 </th>
-                <th class="descriptor">Dex</th>
                 <th class="field">
-                    <select id="dex" onchange="getDexValue();">
-                        <option value="1">1</option>
-                        <option value="2">2</option>
-                        <option value="3">3</option>
-                        <option value="4">4</option>
-                        <option value="5">5</option>
-                        <option value="6">6</option>
-                        <option value="7">7</option>
-                        <option value="8">8</option>
-                        <option value="9">9</option>
-                        <option value="10">10</option>
-                    </select>
+                    <select id="int" onchange="getIntValue();"></select>
                 </th>
-                <th class="descriptor">Luk</th>
+                <th class="descriptor">
+                    Dex
+                </th>
                 <th class="field">
-                    <select id="luk" onchange="getLukValue();">
-                        <option value="1">1</option>
-                        <option value="2">2</option>
-                        <option value="3">3</option>
-                        <option value="4">4</option>
-                        <option value="5">5</option>
-                        <option value="6">6</option>
-                        <option value="7">7</option>
-                        <option value="8">8</option>
-                        <option value="9">9</option>
-                        <option value="10">10</option>
-                    </select>
+                    <select id="dex" onchange="getDexValue();"></select>
+                </th>
+                <th class="descriptor">
+                    Luk
+                </th>
+                <th class="field">
+                    <select id="luk" onchange="getLukValue();"></select>
                 </th>
             </tr>
             <tr>
@@ -153,11 +168,12 @@
                 </th>
                 <th class="descriptor">Adopted</th>
                 <th class="field"><input type="checkbox"></th>
-                <th class="descriptor">Trans</th>
+                <th class="descriptor">Reborn</th>
                 <th class="field"><input type="checkbox"></th>
             </tr>
         </table>
         <script>
+            createDropdowns();
             getStrValue();
             getAgiValue();
             getVitValue();
