added cost to increasing stats

--- a/index.html
+++ b/index.html
@@ -172,6 +172,7 @@
         </table>
         <script>
             fillStatPointsArray();
+            fillStatPointCostArray();
             calcStatPoints();
             createDropdowns();
             getClassValue();
