added placeholder for stat cost and bonus

--- a/index.html
+++ b/index.html
@@ -140,6 +140,8 @@
             </div>
             <div class="grid-item">
                 <select id="luk" onchange="getDropdownValues(); calcStatPoints();"></select>
+                <div class="item-text" id="bonus-luk">+7</div class="text">
+                <div class="item-text" id="luk-cost">(7)</div>
             </div>
             <div class="grid-item">
                 Points left
