--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 Class
             </div>
             <div class="grid-item">
-                <select id="class" onchange="getDropdownValues(); updateOnClassChange(); calcStatPoints();" size="1">
+                <select id="class" onchange="getDropdownValues(); updateOnClassChange(); calcStatPoints(); showCost();" size="1">
                     <!-- Base Job -->
                     <option disabled>Base Job</option>
                     <option value="0">Novice</option>
@@ -109,39 +109,49 @@
                 Str
             </div>
             <div class="grid-item">
-                <select id="str" onchange="getDropdownValues(); calcStatPoints();"></select>
+                <select id="str" onchange="getDropdownValues(); calcStatPoints(); showCost();"></select>
+                <div class="item-text" id="bonus-str">+10</div class="text">
+                <div class="item-text" id="str-cost"></div>
             </div>
             <div class="grid-item">
                 Agi
             </div>
             <div class="grid-item">
-                <select id="agi" onchange="getDropdownValues(); calcStatPoints();"></select>
+                <select id="agi" onchange="getDropdownValues(); calcStatPoints(); showCost();"></select>
+                <div class="item-text" id="bonus-agi">+10</div class="text">
+                <div class="item-text" id="agi-cost"></div>
             </div>
             <div class="grid-item">
                 Vit
             </div>
             <div class="grid-item">
-                <select id="vit" onchange="getDropdownValues(); calcStatPoints();"></select>
+                <select id="vit" onchange="getDropdownValues(); calcStatPoints(); showCost();"></select>
+                <div class="item-text" id="bonus-vi">+10</div class="text">
+                <div class="item-text" id="vit-cost"></div>
             </div>
             <div class="grid-item">
                 Int
             </div>
             <div class="grid-item">
-                <select id="int" onchange="getDropdownValues(); calcStatPoints();"></select>
+                <select id="int" onchange="getDropdownValues(); calcStatPoints(); showCost();"></select>
+                <div class="item-text" id="bonus-int">+10</div class="text">
+                <div class="item-text" id="int-cost"></div>
             </div>
             <div class="grid-item">
                 Dex
             </div>
             <div class="grid-item">
-                <select id="dex" onchange="getDropdownValues(); calcStatPoints();"></select>
+                <select id="dex" onchange="getDropdownValues(); calcStatPoints(); showCost();"></select>
+                <div class="item-text" id="bonus-dex">+10</div class="text">
+                <div class="item-text" id="dex-cost"></div>
             </div>
             <div class="grid-item">
                 Luk
             </div>
             <div class="grid-item">
-                <select id="luk" onchange="getDropdownValues(); calcStatPoints();"></select>
-                <div class="item-text" id="bonus-luk">+7</div class="text">
-                <div class="item-text" id="luk-cost">(7)</div>
+                <select id="luk" onchange="getDropdownValues(); calcStatPoints(); showCost();"></select>
+                <div class="item-text" id="bonus-luk">+10</div class="text">
+                <div class="item-text" id="luk-cost"></div>
             </div>
             <div class="grid-item">
                 Points left
@@ -166,6 +176,7 @@
             fillStatPointsArray();
             fillStatPointCostArray();
             calcStatPoints();
+            showCost();
             createDropdowns();
             updateOnClassChange();
             getDropdownValues();
