--- a/index.html
+++ b/index.html
@@ -11,19 +11,19 @@
                 Base
             </div>
             <div class="grid-item">
-                <select id="base" onchange="getDropdownValues(); calcStatPoints();"></select>
+                <input id="base" onchange="getInputValues(); calcStatPoints();" min="1" max="99" type="number" value="1">
             </div>
             <div class="grid-item">
                 Job
             </div>
             <div class="grid-item">
-                <select id="job" onchange="getDropdownValues();"></select>
+                <input id="job" onchange="getInputValues();" min="1" max="10" type="number" value="1">
             </div>
             <div class="grid-item">
                 Class
             </div>
             <div class="grid-item">
-                <select id="class" onchange="getDropdownValues(); updateOnClassChange(); calcStatPoints(); showCost();" size="1">
+                <select id="class" onchange="getInputValues(); updateOnClassChange(); calcStatPoints(); showCost();" size="1">
                     <!-- Base Job -->
                     <option disabled>Base Job</option>
                     <option value="0">Novice</option>
@@ -109,7 +109,7 @@
                 Str
             </div>
             <div class="grid-item">
-                <select id="str" onchange="getDropdownValues(); calcStatPoints(); showCost();"></select>
+                <input id="str" onchange="getInputValues(); calcStatPoints(); showCost();" min="1" max="99" type="number" value="1">
                 <div class="item-text" id="bonus-str">+10</div class="text">
                 <div class="item-text" id="str-cost"></div>
             </div>
@@ -117,7 +117,7 @@
                 Agi
             </div>
             <div class="grid-item">
-                <select id="agi" onchange="getDropdownValues(); calcStatPoints(); showCost();"></select>
+                <input id="agi" onchange="getInputValues(); calcStatPoints(); showCost();" min="1" max="99" type="number" value="1">
                 <div class="item-text" id="bonus-agi">+10</div class="text">
                 <div class="item-text" id="agi-cost"></div>
             </div>
@@ -125,7 +125,7 @@
                 Vit
             </div>
             <div class="grid-item">
-                <select id="vit" onchange="getDropdownValues(); calcStatPoints(); showCost();"></select>
+                <input id="vit" onchange="getInputValues(); calcStatPoints(); showCost();" min="1" max="99" type="number" value="1">
                 <div class="item-text" id="bonus-vi">+10</div class="text">
                 <div class="item-text" id="vit-cost"></div>
             </div>
@@ -133,7 +133,7 @@
                 Int
             </div>
             <div class="grid-item">
-                <select id="int" onchange="getDropdownValues(); calcStatPoints(); showCost();"></select>
+                <input id="int" onchange="getInputValues(); calcStatPoints(); showCost();" min="1" max="99" type="number" value="1">
                 <div class="item-text" id="bonus-int">+10</div class="text">
                 <div class="item-text" id="int-cost"></div>
             </div>
@@ -141,7 +141,7 @@
                 Dex
             </div>
             <div class="grid-item">
-                <select id="dex" onchange="getDropdownValues(); calcStatPoints(); showCost();"></select>
+                <input id="dex" onchange="getInputValues(); calcStatPoints(); showCost();" min="1" max="99" type="number" value="1">
                 <div class="item-text" id="bonus-dex">+10</div class="text">
                 <div class="item-text" id="dex-cost"></div>
             </div>
@@ -149,9 +149,9 @@
                 Luk
             </div>
             <div class="grid-item">
-                <select id="luk" onchange="getDropdownValues(); calcStatPoints(); showCost();"></select>
+                <input id="luk" onchange="getInputValues(); calcStatPoints(); showCost();" min="1" max="99" type="number" value="1">
                 <div class="item-text" id="bonus-luk">+10</div class="text">
-                <div class="item-text" id="luk-cost"></div>
+                <div class= "item-text" id="luk-cost"></div>
             </div>
             <div class="grid-item">
                 Points left
@@ -177,9 +177,8 @@
             fillStatPointCostArray();
             calcStatPoints();
             showCost();
-            createDropdowns();
             updateOnClassChange();
-            getDropdownValues();
+            getInputValues();
         </script>
     </body>
 </html>
